test/scc/ext/tm/semantic-errors/001.a
001.t:8:5: error: jumping into the body of _Atomic block using goto statement is prohibited